feat: specialties